--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -304,8 +304,8 @@
           style="background:#f1eee9;background-color:#f1eee9;width:100%">
           <tbody>
             <tr>
-              <td style="direction:ltr;font-size:0;padding:0 24px 16px;text-align:center">
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:652px;" ><![endif]-->
+              <td style="direction:ltr;font-size:0;padding:0 0 16px;text-align:center">
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:700px;" ><![endif]-->
                 <div class="mj-column-per-100 mj-outlook-group-fix"
                   style="direction:ltr;display:inline-block;font-size:0;line-height:0;text-align:left;width:100%">
                   <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:middle;width:326px;" ><![endif]-->
@@ -544,6 +544,7 @@
                     </div> 
                     <!--[if mso | IE]>
                     </td>
+                    <td width="24" style="width:24px;height:24px;max-width:24px;">&nbsp;</td>
                   </tr>
                 </table>
               </v:textbox>
