hero background color, h2 non toc label

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -386,7 +386,7 @@
             <td>
               <!--[if mso | IE]>
               <v:rect style="mso-width-percent:980;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false">
-              <v:fill src="images/header-light.png" type="tile" size="1,1" aspect="atmost" color="#ff00ff" />
+              <v:fill src="images/header-light.png" type="tile" size="1,1" aspect="atmost" color="#f1eee9" />
               <v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" >
                   <tr>
@@ -700,7 +700,7 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="H2 - Niet in de inhoudsopgave">
+      </lp-layout><lp-layout lp-label="H2 (Niet in de inhoudsopgave)">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
