--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -684,7 +684,7 @@
                                     <div
                                       style="color:#1d1a14;font-family:Arial;font-size:32px;font-weight:700;line-height:38px;text-align:left;text-decoration:none">
                                       <h2 style="font-family:Arial;font-size:32px;font-weight:700;line-height:38px">
-                                        <lp-singleline lp-toc> Lorem ipsum dolor sit amet.</lp-singleline> </h2>
+                                        <lp-singleline lp-label="H2" lp-toc> Lorem ipsum dolor sit amet.</lp-singleline> </h2>
                                     </div>
                                   </td>
                                 </tr>
@@ -700,7 +700,7 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="H2 (Niet in de inhoudsopgave)">
+      </lp-layout><lp-layout lp-label="H2 - Niet in de inhoudsopgave">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -722,7 +722,7 @@
                                     <div
                                       style="color:#1d1a14;font-family:Arial;font-size:32px;font-weight:700;line-height:38px;text-align:left;text-decoration:none">
                                       <h2 style="font-family:Arial;font-size:32px;font-weight:700;line-height:38px">
-                                        <lp-singleline> Lorem ipsum dolor sit amet.</lp-singleline> </h2>
+                                        <lp-singleline lp-label="H2"> Lorem ipsum dolor sit amet.</lp-singleline> </h2>
                                     </div>
                                   </td>
                                 </tr>
