--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -793,6 +793,39 @@
                                     </table>
                                   </td>
                                 </tr>
+                                <tr>
+                                  <td>
+                                    <!--[if mso]>
+                                      <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="http://laposta.nl" style="height:52px;v-text-anchor:middle; mso-wrap-style: none; mso-position-horizontal: center; mso-position-vertical: top;" arcsize="50%" stroke="f" fillcolor="#e42219">
+                                        <w:anchorlock/>
+                                        <center>
+                                    <![endif]-->
+                                    <a
+                                      rel="noopener"
+                                      target="_blank"
+                                      href="http://laposta.nl"
+                                      style="
+                                        background-color:#e42219;
+                                        border-radius:25px;
+                                        color:#ffffff;
+                                        display:inline-block;
+                                        font-size: 16px; 
+                                        font-family: Arial, sans-serif;
+                                        font-weight:bold;
+                                        text-align:center;
+                                        text-decoration:none;
+                                        -webkit-text-size-adjust:none;
+                                        padding: 16px 24px;"
+                                      >
+                                      This is a VML button &rarr;
+                                      </a>
+                                    <!--[if mso]>
+                                        </center>
+                                      </v:roundrect>
+                                    <![endif]-->
+                                  </td>
+                                </tr>
+
                               </tbody>
                             </table>
                           </td>
