Buttons and agenda

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -778,22 +778,6 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
-                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation"
-                                      style="border-collapse:separate;line-height:100%">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center" bgcolor="#e42219" role="presentation"
-                                            style="border:none;border-radius:800px;cursor:auto;mso-padding-alt:16px 32px 16px 32px;background:#e42219"
-                                            valign="middle"> <a href="https://google.com"
-                                              style="background:#e42219;color:#fff;display:inline-block;font-family:Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 32px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:800px"
-                                              target="_blank"> <lp-singleline>Lorem ipsum</lp-singleline> </a> </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                                <tr>
                                   <td>
                                     <!--[if mso]>
                                       <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="http://laposta.nl" style="height:52px;v-text-anchor:middle; mso-wrap-style: none; mso-position-horizontal: center; mso-position-vertical: top;" arcsize="50%" stroke="f" fillcolor="#e42219">
@@ -817,7 +801,7 @@
                                         -webkit-text-size-adjust:none;
                                         padding: 16px 24px;"
                                       >
-                                      This is a VML button &rarr;
+                                      <lp-singleline lp-label="Button tekst" lp-disable-href>This is a VML Button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         </center>
@@ -892,19 +876,35 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
-                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation"
-                                      style="border-collapse:separate;line-height:100%">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center" bgcolor="#e42219" role="presentation"
-                                            style="border:none;border-radius:800px;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#e42219"
-                                            valign="middle"> <a href="https://google.com"
-                                              style="background:#e42219;color:#fff;display:inline-block;font-family:Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:800px"
-                                              target="_blank"> <lp-singleline>Lorem ipsum</lp-singleline> </a> </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
+                                  <td>
+                                    <!--[if mso]>
+                                      <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="http://laposta.nl" style="height:52px;v-text-anchor:middle; mso-wrap-style: none; mso-position-horizontal: center; mso-position-vertical: top;" arcsize="50%" stroke="f" fillcolor="#e42219">
+                                        <w:anchorlock/>
+                                        <center>
+                                    <![endif]-->
+                                    <a
+                                      rel="noopener"
+                                      target="_blank"
+                                      href="http://laposta.nl"
+                                      style="
+                                        background-color:#e42219;
+                                        border-radius:25px;
+                                        color:#ffffff;
+                                        display:inline-block;
+                                        font-size: 16px; 
+                                        font-family: Arial, sans-serif;
+                                        font-weight:bold;
+                                        text-align:center;
+                                        text-decoration:none;
+                                        -webkit-text-size-adjust:none;
+                                        padding: 16px 24px;"
+                                      >
+                                      <lp-singleline lp-label="Button tekst" lp-disable-href>This is a VML Button &rarr;</lp-singleline>
+                                      </a>
+                                    <!--[if mso]>
+                                        </center>
+                                      </v:roundrect>
+                                    <![endif]-->
                                   </td>
                                 </tr>
                               </tbody>
@@ -1198,19 +1198,35 @@
                             <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                               <tbody>
                                 <tr>
-                                  <td align="center" style="font-size:0;padding:0;word-break:break-word">
-                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation"
-                                      style="border-collapse:separate;line-height:100%">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center" bgcolor="#e42219" role="presentation"
-                                            style="border:none;border-radius:800px;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#e42219"
-                                            valign="middle"> <a href="https://google.com"
-                                              style="background:#e42219;color:#fff;display:inline-block;font-family:Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:800px"
-                                              target="_blank"> <lp-singleline>Lorem ipsum</lp-singleline> </a> </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
+                                  <td align="center">
+                                    <!--[if mso]>
+                                      <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="http://laposta.nl" style="height:52px;v-text-anchor:middle; mso-wrap-style: none; mso-position-horizontal: center; mso-position-vertical: top;" arcsize="50%" stroke="f" fillcolor="#e42219">
+                                        <w:anchorlock/>
+                                        <center>
+                                    <![endif]-->
+                                    <a
+                                      rel="noopener"
+                                      target="_blank"
+                                      href="http://laposta.nl"
+                                      style="
+                                        background-color:#e42219;
+                                        border-radius:25px;
+                                        color:#ffffff;
+                                        display:inline-block;
+                                        font-size: 16px; 
+                                        font-family: Arial, sans-serif;
+                                        font-weight:bold;
+                                        text-align:center;
+                                        text-decoration:none;
+                                        -webkit-text-size-adjust:none;
+                                        padding: 16px 24px;"
+                                      >
+                                      <lp-singleline lp-label="Button tekst" lp-disable-href>This is a VML Button &rarr;</lp-singleline>
+                                      </a>
+                                    <!--[if mso]>
+                                        </center>
+                                      </v:roundrect>
+                                    <![endif]-->
                                   </td>
                                 </tr>
                               </tbody>
@@ -1242,20 +1258,38 @@
                           <td style="padding:0;vertical-align:middle">
                             <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                               <tbody>
+
                                 <tr>
-                                  <td align="center" style="font-size:0;padding:0;word-break:break-word">
-                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation"
-                                      style="border-collapse:separate;line-height:100%">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center" bgcolor="#ffffff" role="presentation"
-                                            style="border:1px solid #1d1a14;border-radius:800px;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#fff"
-                                            valign="middle"> <a href="https://google.com"
-                                              style="background:#fff;color:#1d1a14;display:inline-block;font-family:Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:800px"
-                                              target="_blank"> <lp-singleline>Lorem ipsum</lp-singleline> </a> </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
+                                  <td align="center">
+                                    <!--[if mso]>
+                                      <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="http://laposta.nl" style="height:52px;v-text-anchor:middle; mso-wrap-style: none; mso-position-horizontal: center; mso-position-vertical: top;" arcsize="50%" fillcolor="#ffffff" stroke="t" strokecolor="#1d1a14" strokeweight="1px">
+                                        <w:anchorlock/>
+                                        <center>
+                                    <![endif]-->
+                                    <a
+                                      rel="noopener"
+                                      target="_blank"
+                                      href="http://laposta.nl"
+                                      style="
+                                        background-color:#ffffff;
+                                        border-radius:25px;
+                                        border:1px solid #1d1a14;
+                                        color:#1d1a14;
+                                        display:inline-block;
+                                        font-size: 16px; 
+                                        font-family: Arial, sans-serif;
+                                        font-weight:bold;
+                                        text-align:center;
+                                        text-decoration:none;
+                                        -webkit-text-size-adjust:none;
+                                        padding: 16px 24px;"
+                                      >
+                                      <lp-singleline lp-label="Button tekst" lp-disable-href>This is a VML Button &rarr;</lp-singleline>
+                                      </a>
+                                    <!--[if mso]>
+                                        </center>
+                                      </v:roundrect>
+                                    <![endif]-->
                                   </td>
                                 </tr>
                               </tbody>
@@ -1826,19 +1860,35 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="font-size:0;padding:0;word-break:break-word">
-                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation"
-                                      style="border-collapse:separate;line-height:100%">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center" bgcolor="#e42219" role="presentation"
-                                            style="border:none;border-radius:800px;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#e42219"
-                                            valign="middle"> <a href="https://google.com"
-                                              style="background:#e42219;color:#fff;display:inline-block;font-family:Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:none;mso-padding-alt:0;border-radius:800px"
-                                              target="_blank"> <lp-singleline>Start direct</lp-singleline> </a> </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
+                                  <td align="center">
+                                    <!--[if mso]>
+                                      <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="http://laposta.nl" style="height:52px;v-text-anchor:middle; mso-wrap-style: none; mso-position-horizontal: center; mso-position-vertical: top;" arcsize="50%" stroke="f" fillcolor="#e42219">
+                                        <w:anchorlock/>
+                                        <center>
+                                    <![endif]-->
+                                    <a
+                                      rel="noopener"
+                                      target="_blank"
+                                      href="http://laposta.nl"
+                                      style="
+                                        background-color:#e42219;
+                                        border-radius:25px;
+                                        color:#ffffff;
+                                        display:inline-block;
+                                        font-size: 16px; 
+                                        font-family: Arial, sans-serif;
+                                        font-weight:bold;
+                                        text-align:center;
+                                        text-decoration:none;
+                                        -webkit-text-size-adjust:none;
+                                        padding: 16px 24px;"
+                                      >
+                                      <lp-singleline lp-label="Button tekst" lp-disable-href>Start direct &rarr;</lp-singleline>
+                                      </a>
+                                    <!--[if mso]>
+                                        </center>
+                                      </v:roundrect>
+                                    <![endif]-->
                                   </td>
                                 </tr>
                               </tbody>
@@ -1864,7 +1914,7 @@
                   <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:102px;" ><![endif]-->
                   <div class="mj-column-px-102 mj-outlook-group-fix"
                     style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
-                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                    <table border="0" cellpadding="0" cellspacing="0" role="presentation">
                       <tbody>
                         <tr>
                           <td style="background-color:#e42219;border-radius:8px;padding:16px 24px;vertical-align:top">
