--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -216,6 +216,11 @@
         margin: 0 !important;
         width: 100% !important
       }
+
+      .mobile-gutter-x {
+        padding-left: 24px !important;
+        padding-right: 24px !important;
+      }
     }
 
     .lp-toc img {
@@ -232,7 +237,7 @@
           <tr>
             <td>
               <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f7f6f4" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-              <div style="margin:0 auto;max-width:700px">
+              <div style="margin:0 auto;max-width:700px" class="mobile-gutter-x">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
                   <tbody>
                     <tr>
@@ -299,7 +304,7 @@
       </table>
     </lp-layout><lp-layout lp-label="Header">
       <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f1eee9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-      <div style="background:#f1eee9;background-color:#f1eee9;margin:0 auto;max-width:700px">
+      <div style="background:#f1eee9;background-color:#f1eee9;margin:0 auto;max-width:700px" class="mobile-gutter-x">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
           style="background:#f1eee9;background-color:#f1eee9;width:100%">
           <tbody>
@@ -392,7 +397,7 @@
                   <tr>
                     <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
                     <![endif]-->
-                    <div style="margin:0 auto;max-width:700px">
+                    <div style="margin:0 auto;max-width:700px"  class="mobile-gutter-x">
                       <div style="font-size:0;line-height:0">
                         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
                           style="width:100%">
@@ -2157,7 +2162,7 @@
         <tr>
           <td>
             <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f1eee9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-            <div style="margin:0 auto;max-width:700px">
+            <div style="margin:0 auto;max-width:700px" class="mobile-gutter-x">
               <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
                 <tbody>
                   <tr>
@@ -2200,7 +2205,7 @@
         <tr>
           <td>
             <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f1eee9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-            <div style="margin:0 auto;max-width:700px">
+            <div style="margin:0 auto;max-width:700px" class="mobile-gutter-x">
               <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
                 <tbody>
                   <tr>
@@ -2303,7 +2308,7 @@
         <tr>
           <td>
             <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f1eee9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-            <div style="margin:0 auto;max-width:700px">
+            <div style="margin:0 auto;max-width:700px" class="mobile-gutter-x">
               <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
                 <tbody>
                   <tr>
@@ -2351,7 +2356,7 @@
         <tr>
           <td>
             <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f1eee9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-            <div style="margin:0 auto;max-width:700px">
+            <div style="margin:0 auto;max-width:700px" class="mobile-gutter-x">
               <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
                 <tbody>
                   <tr>
@@ -2391,9 +2396,44 @@
                                               <td align="left" valign="middle"><img
                                                   src="images/I2001_1532_2001_1528.png" alt height="32"
                                                   style="height:32px;width:auto"></td>
-                                              <td style="font-size:8px;padding:0;word-break:break-word" width="32">
-                                                <div style="height:8px;line-height:8px">&nbsp;</div>
-                                              </td>
+                                            </tr>
+                                          </tbody>
+                                        </table>
+                                        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#f1eee9" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                                        <div style="background:#f1eee9;background-color:#f1eee9;margin:0 auto;max-width:700px">
+                                          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
+                                            style="background:#f1eee9;background-color:#f1eee9;width:100%">
+                                            <tbody>
+                                              <tr>
+                                                <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
+                                                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
+                                                  <div class="mj-column-per-100 mj-outlook-group-fix"
+                                                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
+                                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                                                      <tbody>
+                                                        <tr>
+                                                          <td style="padding:0;vertical-align:middle">
+                                                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                                                              <tbody>
+                                                                <tr>
+                                                                  <td style="font-size:0;padding:0;word-break:break-word">
+                                                                    <div style="height:16px;line-height:16px">&#8202;</div>
+                                                                  </td>
+                                                                </tr>
+                                                              </tbody>
+                                                            </table>
+                                                          </td>
+                                                        </tr>
+                                                      </tbody>
+                                                    </table>
+                                                  </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                                        <table cellpadding="0" cellspacing="0" border="0">
+                                          <tr>
                                               <td align="left" valign="middle"
                                                 style="font-size:0;word-break:break-word">
                                                 <div
@@ -2412,7 +2452,6 @@
                                                     style="color:#1d1a14;text-decoration:none">Status</a> </div>
                                               </td>
                                             </tr>
-                                          </tbody>
                                         </table>
                                       </td>
                                     </tr>
