--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -806,7 +806,7 @@
                                         -webkit-text-size-adjust:none;
                                         padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst" lp-disable-href>This is a VML Button &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">This is a VML Button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         </center>
@@ -904,7 +904,7 @@
                                         -webkit-text-size-adjust:none;
                                         padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst" lp-disable-href>This is a VML Button &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">This is a VML Button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         </center>
@@ -1226,7 +1226,7 @@
                                         -webkit-text-size-adjust:none;
                                         padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst" lp-disable-href>This is a VML Button &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">This is a VML Button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         </center>
@@ -1289,7 +1289,7 @@
                                         -webkit-text-size-adjust:none;
                                         padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst" lp-disable-href>This is a VML Button &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">This is a VML Button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         </center>
