--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -436,7 +436,7 @@
                                                                         style="color:#212529;font-family:Arial;font-size:32px;font-weight:700;line-height:38px;text-align:left;text-decoration:none">
                                                                         <h2
                                                                           style="font-family:Arial;font-size:32px;font-weight:700;line-height:38px">
-                                                                          <lp-singleline> Beste {voornaam},</lp-singleline> </h2>
+                                                                          <lp-singleline lp-label="Titel"> Beste {voornaam},</lp-singleline> </h2>
                                                                       </div>
                                                                     </td>
                                                                   </tr>
@@ -445,7 +445,7 @@
                                                                       style="font-size:0;padding:0;word-break:break-word">
                                                                       <div
                                                                         style="color:#212529;font-family:Arial;font-size:20px;font-weight:400;line-height:32px;text-align:left;text-decoration:none">
-                                                                        <lp-singleline> Lorem ipsum dolor sit amet, consectetur
+                                                                        <lp-singleline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
                                                                           adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                                                                           dolore magna aliqua.</lp-singleline> </div>
                                                                     </td>
@@ -651,7 +651,7 @@
                                     <div
                                       style="color:#1d1a14;font-family:Arial;font-size:40px;font-weight:700;line-height:48px;text-align:left;text-decoration:none">
                                       <h1 style="font-family:Arial;font-size:40px;font-weight:700;line-height:48px">
-                                        <lp-singleline> Lorem ipsum dolor sit amet.</lp-singleline> </h1>
+                                        <lp-singleline lp-label="H1"> Lorem ipsum dolor sit amet.</lp-singleline> </h1>
                                     </div>
                                   </td>
                                 </tr>
@@ -2180,7 +2180,7 @@
                                       <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                         <div
                                           style="color:#1d1a14;font-family:Arial;font-size:20px;font-weight:700;line-height:24px;text-align:left;text-decoration:none">
-                                          <lp-singleline> Contact</lp-singleline></div>
+                                          <lp-singleline lp-label="Titel"> Contact</lp-singleline></div>
                                       </td>
                                     </tr>
                                   </tbody>
@@ -2223,7 +2223,7 @@
                                       <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                         <div
                                           style="color:#1d1a14;font-family:Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                          <lp-singleline> <lp-editprofile> Gegevens wijzigen</lp-editprofile>
+                                          <lp-singleline lp-label="Gegevens wijzigen"> <lp-editprofile> Gegevens wijzigen</lp-editprofile>
                                           </lp-singleline> </div>
                                       </td>
                                     </tr>
@@ -2231,7 +2231,7 @@
                                       <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                         <div
                                           style="color:#1d1a14;font-family:Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                          <lp-singleline> <lp-subscribe> Aanmelden</lp-subscribe> </lp-singleline>
+                                          <lp-singleline lp-label="Aanmelden"> <lp-subscribe> Aanmelden</lp-subscribe> </lp-singleline>
                                         </div>
                                       </td>
                                     </tr>
@@ -2274,7 +2274,7 @@
                                       <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                         <div
                                           style="color:#1d1a14;font-family:Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                          <lp-singleline> <lp-webversion> Bekijk de webversie</lp-webversion>
+                                          <lp-singleline lp-label="Bekijk de webversie"> <lp-webversion> Bekijk de webversie</lp-webversion>
                                           </lp-singleline> </div>
                                       </td>
                                     </tr>
@@ -2282,7 +2282,7 @@
                                       <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                         <div
                                           style="color:#1d1a14;font-family:Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                          <lp-singleline> <lp-unsubscribe> Afmelden nieuwsbrief</lp-unsubscribe>
+                                          <lp-singleline lp-label="Afmelden"> <lp-unsubscribe> Afmelden nieuwsbrief</lp-unsubscribe>
                                           </lp-singleline> </div>
                                       </td>
                                     </tr>
