CTA button href

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -1888,7 +1888,7 @@
                                         -webkit-text-size-adjust:none;
                                         padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst" lp-disable-href>Start direct &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">Start direct &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         </center>
