--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -226,6 +226,12 @@
     .lp-toc img {
       height: 24px !important
     }
+
+    @media (prefers-color-scheme: dark) {
+      body{
+        background-color: #ffffff !important;
+      }        
+    }
   </style>
 </head>
 
@@ -435,7 +441,7 @@
                                                                       <div
                                                                         style="color:#212529;font-family:Arial;font-size:32px;font-weight:700;line-height:38px;text-align:left;text-decoration:none">
                                                                         <h2
-                                                                          style="font-family:Arial;font-size:32px;font-weight:700;line-height:38px">
+                                                                          style="font-family:Arial;font-size:32px;font-weight:700;line-height:38px;mso-color-alt:auto;">
                                                                           <lp-singleline lp-label="Titel"> Beste {voornaam},</lp-singleline> </h2>
                                                                       </div>
                                                                     </td>
@@ -444,7 +450,7 @@
                                                                     <td align="left"
                                                                       style="font-size:0;padding:0;word-break:break-word">
                                                                       <div
-                                                                        style="color:#212529;font-family:Arial;font-size:20px;font-weight:400;line-height:32px;text-align:left;text-decoration:none">
+                                                                        style="color:#212529;font-family:Arial;font-size:20px;font-weight:400;line-height:32px;text-align:left;text-decoration:none;mso-color-alt:auto;">
                                                                         <lp-singleline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
                                                                           adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                                                                           dolore magna aliqua.</lp-singleline> </div>
