--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -189,6 +189,11 @@
     a:link {
       color: inherit
     }
+    
+    .lp-toc-link a {
+      color: #1d1a14;
+      text-decoration: none;
+    }
 
     @media screen and (max-width:700px) {
       .inline-image {
