--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -193,6 +193,9 @@
     .lp-toc-link a {
       color: #1d1a14;
       text-decoration: none;
+      font-family:Arial;
+      font-size:16px;
+      font-weight:400;
     }
 
     @media screen and (max-width:700px) {
