--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -192,10 +192,11 @@
     
     .lp-toc-link a {
       color: #1d1a14;
+      color: red;
       text-decoration: none;
-      font-family:Arial;
-      font-size:16px;
-      font-weight:400;
+      font-family:Arial, sans-serif;
+      font-size: 16px;
+      font-weight: 400;
     }
 
     @media screen and (max-width:700px) {
