dark mode button bg

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -55,6 +55,11 @@
         }
       </style>
     <![endif]--><!--[if !mso]><!-->
+    <!--[if mso]> 
+      <style> 
+      .cta-button {background: transparent !important;} 
+      </style> 
+    <![endif]-->
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet" type="text/css">
   <style type="text/css">
     @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
@@ -805,6 +810,7 @@
                                         <center>
                                     <![endif]-->
                                     <a
+                                      class="cta-button"
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
@@ -903,6 +909,7 @@
                                         <center>
                                     <![endif]-->
                                     <a
+                                      class="cta-button"
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
@@ -1225,6 +1232,7 @@
                                         <center>
                                     <![endif]-->
                                     <a
+                                      class="cta-button"
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
@@ -1287,6 +1295,7 @@
                                         <center>
                                     <![endif]-->
                                     <a
+                                      class="cta-button"
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
@@ -1887,6 +1896,7 @@
                                         <center>
                                     <![endif]-->
                                     <a
+                                      class="cta-button"
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
