outlook-darkmode-fix

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -57,7 +57,8 @@
     <![endif]--><!--[if !mso]><!-->
     <!--[if mso]> 
       <style> 
-      .cta-button {background: transparent !important;} 
+      .cta-button {background: transparent !important;}
+      .outlook-darkmode-fix {color: #ff00ff !important;background-color: #ffffff !important;} 
       </style> 
     <![endif]-->
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet" type="text/css">
@@ -197,7 +198,6 @@
     
     .lp-toc-link a {
       color: #1d1a14;
-      color: red;
       text-decoration: none;
       font-family:Arial, sans-serif;
       font-size: 16px;
@@ -455,7 +455,7 @@
                                                                       <div
                                                                         style="color:#212529;font-family:Arial;font-size:32px;font-weight:700;line-height:38px;text-align:left;text-decoration:none">
                                                                         <h2
-                                                                          style="font-family:Arial;font-size:32px;font-weight:700;line-height:38px;mso-color-alt:auto;">
+                                                                          style="font-family:Arial;font-size:32px;font-weight:700;line-height:38px;mso-color-alt:auto;" class="outlook-darkmode-fix">
                                                                           <lp-singleline lp-label="Titel"> Beste {voornaam},</lp-singleline> </h2>
                                                                       </div>
                                                                     </td>
@@ -464,7 +464,7 @@
                                                                     <td align="left"
                                                                       style="font-size:0;padding:0;word-break:break-word">
                                                                       <div
-                                                                        style="color:#212529;font-family:Arial;font-size:20px;font-weight:400;line-height:32px;text-align:left;text-decoration:none;mso-color-alt:auto;">
+                                                                        style="color:#212529;font-family:Arial;font-size:20px;font-weight:400;line-height:32px;text-align:left;text-decoration:none;mso-color-alt:auto;" class="outlook-darkmode-fix">
                                                                         <lp-singleline lp-label="Tekstblok"> Lorem ipsum dolor sit amet, consectetur
                                                                           adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                                                                           dolore magna aliqua.</lp-singleline> </div>
