--- a/Laposta/default_outlook-bg.html
+++ b/Laposta/default_outlook-bg.html
@@ -404,6 +404,9 @@
           <tr>
             <td>
               <!--[if mso | IE]>
+              <v:rect style="mso-width-percent:980;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false">
+              <v:fill src="images/header-light.png" type="tile" size="1,1" aspect="atmost" color="#f1eee9" />
+              <v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" >
                   <tr>
                     <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
@@ -436,12 +439,7 @@
                                                         width="100%">
                                                         <tbody>
                                                           <tr>
-                                                            <!--[if mso]>
-                                                            <td style="padding:48px 0 32px; vertical-align:top;">
-                                                            <![endif]-->
-                                                            <!--[if !mso]> -->
-                                                            <td style="padding:150px 0 100px; vertical-align:top;">
-                                                            <!--<![endif]-->
+                                                            <td style="padding:150px 0 100px;vertical-align:top">
                                                               <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                                                 width="100%">
                                                                 <tbody>
@@ -568,6 +566,8 @@
                     <td width="24" style="width:24px;height:24px;max-width:24px;">&nbsp;</td>
                   </tr>
                 </table>
+              </v:textbox>
+              </v:rect>
               <![endif]-->
             </td>
           </tr>
