--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -439,9 +439,9 @@
                                                             <!--[if mso]>
                                                             <td style="padding:48px 0 32px; vertical-align:top;">
                                                             <![endif]-->
-                                                            <!--[if !mso]> -->
+                                                            <!--[if !mso]>
                                                             <td style="padding:150px 0 100px; vertical-align:top;">
-                                                            <!--<![endif]-->
+                                                            <![endif]-->
                                                               <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                                                 width="100%">
                                                                 <tbody>
