--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -435,13 +435,22 @@
                                                       <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                                         width="100%">
                                                         <tbody>
+
                                                           <tr>
-                                                            <!--[if mso]>
-                                                            <td style="padding:48px 0 32px; vertical-align:top;">
-                                                            <![endif]-->
-                                                            <!--[if !mso]>
-                                                            <td style="padding:150px 0 100px; vertical-align:top;">
-                                                            <![endif]-->
+                                                            <td style="font-size:0;padding:0;word-break:break-word" bgcolor="red">
+                                                              <!--[if !mso]><!-- -->
+                                                              <div style="height:150px;line-height:150px"> </div>
+                                                              <!--<![endif]-->
+                                                              <!--[if mso]>
+                                                                <div style="height:48px;line-height:48px"> </div>
+                                                              <![endif]-->
+                                                            </td>
+                                                          </tr>
+
+                                                          <tr>
+                                                            
+                                                            <td style="padding:0; vertical-align:top;">
+                                                            
                                                               <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                                                 width="100%">
                                                                 <tbody>
@@ -470,6 +479,18 @@
                                                               </table>
                                                             </td>
                                                           </tr>
+
+                                                          <tr>
+                                                            <td style="font-size:0;padding:0;word-break:break-word" bgcolor="yellow">
+                                                              <!--[if !mso]><!-- -->
+                                                              <div style="height:100px;line-height:100px"> </div>
+                                                              <!--<![endif]-->
+                                                              <!--[if mso]>
+                                                                <div style="height:32px;line-height:32px"> </div>
+                                                              <![endif]-->
+                                                            </td>
+                                                          </tr>
+
                                                         </tbody>
                                                       </table>
                                                     </div> <!--[if mso | IE]></td></tr></table><![endif]-->
