removed outlook bg colors from spacing cells

--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -437,7 +437,7 @@
                                                         <tbody>
 
                                                           <tr>
-                                                            <td style="font-size:0;padding:0;word-break:break-word" bgcolor="red">
+                                                            <td style="font-size:0;padding:0;word-break:break-word">
                                                               <!--[if !mso]><!-- -->
                                                               <div style="height:150px;line-height:150px"> </div>
                                                               <!--<![endif]-->
@@ -481,7 +481,7 @@
                                                           </tr>
 
                                                           <tr>
-                                                            <td style="font-size:0;padding:0;word-break:break-word" bgcolor="yellow">
+                                                            <td style="font-size:0;padding:0;word-break:break-word">
                                                               <!--[if !mso]><!-- -->
                                                               <div style="height:100px;line-height:100px"> </div>
                                                               <!--<![endif]-->
