--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -342,7 +342,7 @@
                                       style="border-collapse:collapse;border-spacing:0">
                                       <tbody>
                                         <tr>
-                                          <td style="width:134px"> <img alt src="images/I136_840_79_219_52_69.png"
+                                          <td style="width:134px"> <img alt src="images/Logo.png"
                                               style="border:0;border-radius:8px;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
                                               width="134" height="auto" lp-logo> </td>
                                         </tr>
