--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -637,7 +637,15 @@
             style="background:#fff;background-color:#fff;border-radius:8px 8px 0 0;width:100%">
             <tbody>
               <tr>
-                <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
+                <td width="24">
+                  <!--[if mso]>
+                    <v:shape style="width:24px;height:24px;" coordorigin="0 0" coordsize="2 2" fillcolor="#ff0000" stroke="f" fill="true" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word">
+                        <v:path v="m 0,2 c 0,1,1,0,2,0 l 2,2 x"/>
+                    </v:shape>
+                  <![endif]-->
+                  <div style="height:24px;line-height:24px"> </div>
+                </td>
+                <td style="direction:ltr;font-size:0;padding:0;text-align:center">
                   <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
                   <div class="mj-column-per-100 mj-outlook-group-fix"
                     style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
@@ -659,6 +667,9 @@
                       </tbody>
                     </table>
                   </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                </td>
+                <td width="24" bgcolor="red">
+                  <div style="height:24px;line-height:24px"> </div>
                 </td>
               </tr>
             </tbody>
