--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -39,26 +39,40 @@
       display: block;
       margin: 13px 0
     }
-  </style><!--[if mso]>
-      <noscript>
-        <xml>
-          <o:OfficeDocumentSettings>
-            <o:AllowPNG />
-            <o:PixelsPerInch>96</o:PixelsPerInch>
-          </o:OfficeDocumentSettings>
-        </xml>
-      </noscript>
-    <![endif]--><!--[if lte mso 11]>
-      <style type="text/css">
-        .mj-outlook-group-fix {
-          width: 100% !important;
-        }
-      </style>
-    <![endif]--><!--[if !mso]><!-->
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet" type="text/css">
-  <style type="text/css">
-    @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
-  </style><!--<![endif]-->
+  </style>
+  <!--[if mso]>
+    <noscript>
+      <xml>
+        <o:OfficeDocumentSettings>
+          <o:AllowPNG />
+          <o:PixelsPerInch>96</o:PixelsPerInch>
+        </o:OfficeDocumentSettings>
+      </xml>
+    </noscript>
+  <![endif]-->
+  <!--[if lte mso 11]>
+    <style type="text/css">
+      .mj-outlook-group-fix {
+        width: 100% !important;
+      }
+    </style>
+  <![endif]-->
+  <!--[if !mso]><!-->
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet" type="text/css">
+    <style type="text/css">
+      @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
+    </style>
+  <!--<![endif]-->
+  <!--[if mso]>
+    <style>
+      .cta-button {
+        background: none !important;
+        border: none !important;
+        padding: 0 !important;
+        color: inherit !important;
+      }
+    </style>
+  <![endif]-->
   <style type="text/css">
     @media only screen and (min-width:700px) {
       .mj-column-per-100 {
@@ -1222,20 +1236,9 @@
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
-                                      style="
-                                        background-color:#e42219;
-                                        border-radius:25px;
-                                        color:#ffffff;
-                                        display:inline-block;
-                                        font-size: 16px; 
-                                        font-family: Arial, sans-serif;
-                                        font-weight:bold;
-                                        text-align:center;
-                                        text-decoration:none;
-                                        -webkit-text-size-adjust:none;
-                                        padding: 16px 24px;"
+                                      style="background-color:#e42219;border-radius:25px;color:#ffffff;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst">This is a VML Button &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">This is a button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         
@@ -1286,20 +1289,9 @@
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
-                                      style="
-                                        background-color:#e42219;
-                                        border-radius:25px;
-                                        color:#ffffff;
-                                        display:inline-block;
-                                        font-size: 16px; 
-                                        font-family: Arial, sans-serif;
-                                        font-weight:bold;
-                                        text-align:center;
-                                        text-decoration:none;
-                                        -webkit-text-size-adjust:none;
-                                        padding: 16px 24px;"
+                                      style="background-color:#e42219;border-radius:25px;color:#ffffff;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst">This is a VML Button &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">This is a button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         </center>
@@ -1350,21 +1342,9 @@
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
-                                      style="
-                                        background-color:#ffffff;
-                                        border-radius:25px;
-                                        border:1px solid #1d1a14;
-                                        color:#1d1a14;
-                                        display:inline-block;
-                                        font-size: 16px; 
-                                        font-family: Arial, sans-serif;
-                                        font-weight:bold;
-                                        text-align:center;
-                                        text-decoration:none;
-                                        -webkit-text-size-adjust:none;
-                                        padding: 16px 24px;"
+                                      style="background-color:#ffffff;border-radius:25px;border:1px solid #1d1a14;color:#1d1a14;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst">This is a VML Button &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">This is a button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                       </v:roundrect>
@@ -1415,21 +1395,9 @@
                                       rel="noopener"
                                       target="_blank"
                                       href="http://laposta.nl"
-                                      style="
-                                        background-color:#ffffff;
-                                        border-radius:25px;
-                                        border:1px solid #1d1a14;
-                                        color:#1d1a14;
-                                        display:inline-block;
-                                        font-size: 16px; 
-                                        font-family: Arial, sans-serif;
-                                        font-weight:bold;
-                                        text-align:center;
-                                        text-decoration:none;
-                                        -webkit-text-size-adjust:none;
-                                        padding: 16px 24px;"
+                                      style="background-color:#ffffff;border-radius:25px;border:1px solid #1d1a14;color:#1d1a14;display:inline-block;font-size: 16px; font-family: Arial, sans-serif;font-weight:bold;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;padding: 16px 24px;"
                                       >
-                                      <lp-singleline lp-label="Button tekst">This is a VML Button &rarr;</lp-singleline>
+                                      <lp-singleline lp-label="Button tekst">This is a button &rarr;</lp-singleline>
                                       </a>
                                     <!--[if mso]>
                                         </center>
