--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -66,7 +66,7 @@
   <!--[if mso]>
     <style>
       .cta-button {
-        background: none !important;
+        background: transparent !important;
         border: none !important;
         padding: 0 !important;
         color: inherit !important;
