--- a/Laposta/default.html
+++ b/Laposta/default.html
@@ -69,7 +69,7 @@
         background: transparent !important;
         border: none !important;
         padding: 0 !important;
-        color: inherit !important;
+        color: auto !important;
       }
     </style>
   <![endif]-->
